--- a/10-hold-shift-and-check-checkboxes/index.html
+++ b/10-hold-shift-and-check-checkboxes/index.html
@@ -96,22 +96,18 @@
       const checkboxes = document.querySelectorAll(
         '.inbox input[type="checkbox"]'
       );
+      const paragraphs = document.querySelectorAll(".inbox .item p");
 
-      let lastChecked;
+      let lastChecked = null;
 
       function handleCheck(e) {
-        // Check if they had the shift key down
-        // AND check that they are checking it
         let inBetween = false;
-        
+
         if (e.shiftKey && this.checked) {
-          // go ahead and do what we please
           // loop over every single checkbox
           checkboxes.forEach((checkbox) => {
-            console.log(checkbox);
             if (checkbox === this || checkbox === lastChecked) {
               inBetween = !inBetween;
-              console.log("Starting to check them in between!");
             }
 
             if (inBetween) {
@@ -125,6 +121,13 @@
 
       checkboxes.forEach((checkbox) =>
         checkbox.addEventListener("click", handleCheck)
+      );
+
+      paragraphs.forEach((p) =>
+        p.addEventListener("click", () => {
+          const checkbox = p.previousElementSibling;
+          checkbox.checked = !checkbox.checked;
+        })
       );
     </script>
   </body>
